logs/e2a_sky_15862.log
  File "/home/dsia-st125985/SpineVQA/scripts/E2a_newsplit.py", line 1
    cat > ~/SpineVQA/scripts/E2a_newsplit.py << 'EOF'
           ^
SyntaxError: invalid syntax
